# CSE535_Mobile_Computing

./: .gitignore  README.md  UploadToServer.php  readme.txt
Group17Assignment3/: CMakeLists.txt
Group17Assignment3/app/: build.gradle
Group17Assignment3/app/src/androidTest/java/com/example/racheldedinsky/group17assignment3/: ExampleInstrumentedTest.java
Group17Assignment3/app/src/main/: AndroidManifest.xml
Group17Assignment3/app/src/main/assets/www/: plotlyEX.html  plotlyEX.js
Group17Assignment3/app/src/main/cpp/: hello.cpp
Group17Assignment3/app/src/main/java/com/example/racheldedinsky/group17assignment3/: ActivityData.java  DBHandler.java  DataBaseHelper.java  GraphActivity.java  MainActivity.java  SensorListener.java  fetchData.java  trainActivity.java
Group17Assignment3/app/src/main/res/layout/: activity_main.xml  graph_layout.xml  main.xml
Group17Assignment3/app/src/main/res/values/: strings.xml
Group17Assignment3/app/src/test/java/com/example/racheldedinsky/group17assignment3/: ExampleUnitTest.java
Group17Assignment3/gradle/wrapper/: gradle-wrapper.properties
Group17Assignment3/openCVLibrary310/: build.gradle
HelloOpenCv/: import-summary.txt  openCV_jni.txt
HelloOpenCv/app/: CMakeLists.txt  build.gradle
HelloOpenCv/app/src/androidTest/java/com/example/josh/helloopencv/: ExampleInstrumentedTest.java
HelloOpenCv/app/src/main/: AndroidManifest.xml
HelloOpenCv/app/src/main/cpp/: native-lib.cpp
HelloOpenCv/app/src/main/java/com/example/josh/helloopencv/: MainActivity.java
HelloOpenCv/app/src/test/java/com/example/josh/helloopencv/: ExampleUnitTest.java
HelloOpenCv/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle
app/src/androidTest/java/com/example/kushal/mc535/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/kushal/mc535/: DBHandler.java  DatabaseHelper.java  GraphView.java  MainActivity.java  Patient.java  SensorlistnerService.java
app/src/main/res/layout/: activity_main.xml  content_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/kushal/mc535/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
hw2/app/: build.gradle
hw2/app/src/main/: AndroidManifest.xml
hw2/app/src/main/java/com/example/racheldedinsky/group17/: MainActivity.java  (+1 more)
hw2/app/src/main/res/layout/: activity_main.xml
hw2/app/src/main/res/values/: strings.xml
hw2/gradle/wrapper/: gradle-wrapper.properties
rachelVideo/: .hw2RachelDedinsky.mp4.icloud
(+2 files in other folders)
